@@ -233,6 +233,7 @@ enum {
   E_INVALID_UNIVERSAL           = 204, /* incomplete universal character name %s. */
   W_UNIVERSAL_C99               = 205, /* universal character names are only valid in C99 */
   E_SHORTLONG                   = 206, /* Invalid combination of short / long */
+  E_INTEGERSUFFIX               = 207, /* Invalid integer suffix */
 
   /* don't touch this! */
   NUMBER_OF_ERROR_MESSAGES             /* Number of error messages */
